fixed: overflow issue for menu items

--- a/wp-content/themes/vigor/assets/css/main.css
+++ b/wp-content/themes/vigor/assets/css/main.css
@@ -279,6 +279,7 @@ a:hover {
     #navbar {
         box-shadow: 0px 1px 10px #000c;
         border-bottom: 1px solid #000;
+        overflow-y: scroll;
     }
     
     #navbar .navbar-toggler {
